# observability-stack

./: .gitignore  docker-compose.yaml
app/: README.md  pyproject.toml
app/src/app/: __init__.py  main.py  tracing.py
shared/: grafana-datasources.yaml  prometheus.yaml  tempo.yaml
tempo-data/blocks/: tempo_cluster_seed.json
tempo-data/generator/wal/single-tenant/wal/: 00000000
